# iglib

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  build.sh
iglib/: CMakeLists.txt
iglib/include/iglib/: iglib.hpp
iglib/src/: iglib.cpp
src/: basic.cpp  movement.cpp  textures.cpp
